# softposit-cpp

./: .gitignore  CMakeLists.txt  README.md  SoftPOSIT.m  demo.cpp  mytricks.hpp  softposit.cpp  softposit.hpp
cmake-modules/: ListSubDirs.cmake  findlapack.cmake  flycheck-clang.cmake
doc/: readme.org
doc/auto/: readme.el
src/: CMakeLists.txt  demo.cpp  pysoftposit.i
src/demo/: CMakeLists.txt  demo.cpp
src/softposit/: CMakeLists.txt  softposit.cpp  softposit.hpp
